# pycon-studio

./: .dockerignore  .env.example  .gitignore  .mise.toml  ATTRIBUTION.md  DEPLOY.md  DEVELOPMENT.md  LICENSE  README.md  compose.yaml  start.py
backend/: environment.yml  pyproject.toml
backend/src/bangers/: ace_handler.py  config.py  lyrics_guardrails.md  main.py  model_registry.py
backend/src/bangers/backends/: __init__.py  ace_step_backend.py
backend/src/bangers/db/: connection.py  schema.py
backend/src/bangers/models/: common.py  dj.py  generation.py  radio.py
backend/src/bangers/routers/: dj.py  generation.py  health.py  history.py  internal_workers.py  models.py  radio.py  songs.py  uploads.py
backend/src/bangers/services/: ace_downloads.py  chat_llm.py  deferred_titles.py  distributed.py  dj_service.py  duration_settings.py  generation.py  generation_request_builder.py  gpu_lock.py  gpu_stats.py  llm_provider.py  lyrics_pipeline.py  music_profiles.py  music_specs.py  radio_service.py  runtime_settings.py  title_generator.py
backend/src/bangers/ws/: manager.py
backend/tests/: conftest.py  test_chat_runtime.py  test_config.py  test_dj_service.py  test_generation.py  test_generation_defaults.py  test_generation_service.py  test_gpu_stats.py  test_health.py  test_internal_workers.py  test_lyrics_pipeline.py  test_models.py  test_music_specs.py  test_phase9.py  test_radio_service.py  test_timing_bucket.py  test_title_generator.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx  settings-page.test.tsx
frontend/src/components/create/: advanced-settings.tsx  auto-gen-controls.tsx  caption-input.tsx  create-page-client.tsx  generation-form.tsx  generation-progress.tsx  metadata-controls.tsx  mode-selector.tsx  (+2 more)
frontend/src/hooks/: use-active-model.ts  use-generation-ws.ts  use-generation.ts  use-health-ws.ts  use-keyboard-shortcuts.ts  use-media-session.ts  use-playback-controller.ts  use-radio-playback.ts  use-radio.ts  use-wavesurfer.ts
frontend/src/lib/: constants.ts  export-utils.ts  player-audio.ts
frontend/src/stores/: ambient-store.ts  generation-store.ts  player-store.ts  radio-store.ts  settings-store.ts  sidebar-store.ts
frontend/src/test/: setup.ts
frontend/src/themes/: bangers.css  bangers.ts  index.css  index.ts
frontend/src/types/: api.ts
(+46 files in other folders)
