[project]
name = "pip-install-bangers"
version = "0.1.0"
description = "conda install bangers - Premium Local Music Generation UI"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "loguru>=0.7.3",
    "tinytag>=2.0.0",
    "ace-step",
    "nano-vllm; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "hf-xet>=1.1",
]

[tool.uv.sources]
ace-step = { git = "https://github.com/ace-step/ACE-Step-1.5", rev = "82a5d84" }
nano-vllm = { git = "https://github.com/ace-step/ACE-Step-1.5", subdirectory = "acestep/third_parts/nano-vllm", rev = "82a5d84" }

[tool.uv]
override-dependencies = [
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchvision>=0.19.1",
    "torchao>=0.9.0",
    "torchtune>=0.4.0",
    "datasets>=3.0.0",
    "transformers>=4.57.0",
]

[project.scripts]
pip-install-bangers = "bangers.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bangers"]
