[project]
name = "conda-install-bangers"
version = "0.1.0"
description = "conda install bangers - Premium Local Music Generation UI"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "loguru>=0.7.3",
    "tinytag>=2.0.0",
    "ace-step @ git+https://github.com/ace-step/ACE-Step-1.5@82a5d8432c37f7c5d2ee4e561fb9a8e703207106",
    "nano-vllm @ git+https://github.com/ace-step/ACE-Step-1.5@82a5d8432c37f7c5d2ee4e561fb9a8e703207106#subdirectory=acestep/third_parts/nano-vllm ; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "hf-xet>=1.1",
]

[project.scripts]
conda-install-bangers = "bangers.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bangers"]
